--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html, body
 	font-family: Arial;
 	font-size: 12px;
 	color: white;
-	background: black;
+	background: #333;
 	-webkit-text-size-adjust: none; /* important, or your text resizes randomly on rotation! */
 }
 
